[package]
name = "local-polkadot"
description = "A simple CLI tool to run a local Polkadot RPC Node and explorer"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0"
authors = ["Abhishek Shah <abhishekshah3@gmail.com>"]
readme = "README.md"
repository = "https://github.com/weezy20/local-polkadot"
homepage = "https://github.com/weezy20/local-polkadot"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
cliclack = "0.3.5"
ctrlc = "3.4.5"
reqwest = { version = "0.12.9", features = ["blocking"] }
